<resources>
    <string name="app_name">ISocial</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="new_post">New Post</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="logo_text">ISocial</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="or">Or</string>
    <string name="singin_with_google">SingIn with Google</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="add_post">Add Post</string>
    <string name="your_post_message">your post message</string>
    <string name="publish_post">Publish Post</string>
    <string name="select_image">Click to Select Post Image</string>
</resources>