<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/qn_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/go_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/go_register"
        app:layout_constraintTop_toBottomOf="@+id/go_register" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/log_edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/log_edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_lock"
        app:layout_constraintEnd_toEndOf="@+id/log_edt_email"
        app:layout_constraintStart_toStartOf="@+id/log_edt_email"
        app:layout_constraintTop_toBottomOf="@+id/log_edt_email" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/log_edt_password"
        app:layout_constraintStart_toStartOf="@+id/log_edt_password"
        app:layout_constraintTop_toBottomOf="@+id/log_edt_password" />

    <TextView
        android:id="@+id/qn_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/go_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/qn_text"
        app:layout_constraintTop_toBottomOf="@+id/qn_text" />

    <Button
        android:id="@+id/btn_google_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:text="@string/singin_with_google"
        app:layout_constraintEnd_toEndOf="@+id/qn_or"
        app:layout_constraintStart_toStartOf="@+id/qn_or"
        app:layout_constraintTop_toBottomOf="@+id/qn_or" />


</androidx.constraintlayout.widget.ConstraintLayout>