<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_post"
    tools:context=".PostActivity">


    <include
        android:id="@+id/post_page_toolbar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_page_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/post_image"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/inputs"
                android:scaleType="centerCrop"
                android:src="@drawable/newpost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/post_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/inputs"
                android:layout_marginTop="16dp"
                android:hint="@string/your_post_message"
                app:layout_constraintTop_toBottomOf="@+id/post_image"
                app:layout_constraintStart_toStartOf="@+id/post_image"
                app:layout_constraintEnd_toEndOf="@+id/post_image"/>

            <Button
                android:id="@+id/post_publish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/publish_post"
                app:layout_constraintTop_toBottomOf="@+id/post_text"
                app:layout_constraintStart_toStartOf="@+id/post_text"
                app:layout_constraintEnd_toEndOf="@+id/post_text"
                android:background="@drawable/button"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/select_image"
                app:layout_constraintEnd_toEndOf="@+id/post_image"
                app:layout_constraintStart_toStartOf="@+id/post_image"
                app:layout_constraintTop_toTopOf="@+id/post_image" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>